--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "ziggo-horizon",
-  "version": "0.9.0",
+  "name": "neeo-driver-ziggo-horizon",
+  "version": "0.51.13",
   "description": "Custom driver for the SMT-C7400 and SMT-C7401 for the Neeo remote.",
   "main": "index.js",
   "dependencies": {
-    "bluebird": "^3.5.1",
+    "bluebird": "^3.5.2",
     "config": "^1.28.1",
     "debug": "^3.1.0",
-    "neeo-sdk": "^0.50.5",
+    "neeo-sdk": "^0.51.13",
     "net": "^1.0.2",
     "node-ssdp": "^3.3.0",
     "xml2js": "^0.4.19"
