--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Custom driver for the SMT-C7400 and SMT-C7401 for the Neeo remote.",
   "main": "index.js",
   "dependencies": {
+    "@neeo/cli": "^1.1.0",
     "bluebird": "^3.5.2",
     "config": "^1.28.1",
     "debug": "^3.1.0",
-    "neeo-sdk": "^0.51.13",
+    "neeo-sdk": "^0.53.8",
     "net": "^1.0.2",
     "node-ssdp": "^3.3.0",
     "xml2js": "^0.4.19"
@@ -15,21 +16,21 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "neeo-sdk start"
+    "start": "npx neeo-cli start"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Webunity/ziggo-horizon.git"
+    "url": "git+https://github.com/Webunity/neeo-driver-ziggo-horizon.git"
   },
   "author": "Gilles van den Hoven <gilles@webunity.nl>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Webunity/ziggo-horizon/issues"
+    "url": "https://github.com/Webunity/neeo-driver-ziggo-horizon/issues"
   },
   "engines": {
-    "node": ">=6.0.0"
+    "node": ">=8.0.0"
   },
-  "homepage": "https://github.com/Webunity/ziggo-horizon#readme",
+  "homepage": "https://github.com/Webunity/neeo-driver-ziggo-horizon#readme",
   "neeoSdkOptions": {
     "serverName": "ziggo-horizon",
     "serverPort": 6336
