Changed daemon script

--- a/assets/my-neeo-server.service
+++ b/assets/my-neeo-server.service
@@ -1,11 +1,11 @@
 [Unit]
-Description=Ziggo Horizon Mediabox XL driver for your Neeo remote(s)
+Description=My Neeo Server
 Wants=network-online.target
 After=network-online.target
 
 [Service]
-WorkingDirectory=/opt/neeo/ziggo-horizon
-ExecStart=/opt/neeo/ziggo-horizon/node_modules/.bin/neeo-sdk start
+WorkingDirectory=/opt/neeo/my-neeo-server
+ExecStart=npx neeo-cli start
 ExecReload=/bin/kill -HUP $MAINPID
 KillMode=control-group
 Restart=always
