--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "dependencies": {
     "@neeo/cli": "^1.1.0",
     "bluebird": "^3.5.2",
+    "config": "^1.28.1",
+    "debug": "^3.1.0",
     "neeo-sdk": "^0.53.8",
-    "neeo-sdk-webunity": "github:Webunity/neeo-sdk-webunity",
     "net": "^1.0.2",
     "node-ssdp": "^3.3.0",
     "xml2js": "^0.4.19"
